--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@tailwindcss/vite": "^4.1.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.24.5",
     "lucide-react": "^0.562.0",
+    "pdfjs-dist": "^5.4.530",
     "react": "^19.0.0",
+    "react-doc-viewer": "^0.1.15",
     "react-dom": "^19.0.0",
+    "react-pdf": "^10.3.0",
     "react-router": "^7.11.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
@@ -27,6 +31,7 @@
     "@types/node": "^25.0.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-pdf": "^6.2.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
