--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.24.5",
     "lucide-react": "^0.562.0",
+    "mammoth": "^1.11.0",
     "pdfjs-dist": "^5.4.530",
+    "pptx-parser": "^1.1.7-beta.9",
     "react": "^19.0.0",
     "react-doc-viewer": "^0.1.15",
     "react-dom": "^19.0.0",
@@ -25,6 +27,7 @@
     "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
