--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.24.5",
+    "hls.js": "^1.5.7",
     "lucide-react": "^0.562.0",
     "mammoth": "^1.11.0",
     "pdfjs-dist": "^5.4.530",
